name:                presburger-dfa
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/konn/presburger-dfa#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arithmetic.Presburger.Solver.DFA
                     , Arithmetic.Presburger.Solver.DFA.Monadic
                     , Arithmetic.Presburger.Solver.DFA.Automata
  other-modules:       Arithmetic.Presburger.Solver.DFA.Types
  build-depends:       base >= 4.7 && < 5
                     , uniplate
                     , vector
                     , unordered-containers
                     , containers
                     , transformers
                     , hashable
  default-language:    Haskell2010
  ghc-options:         -Wall

-- executable presburger-dfa-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
--   build-depends:       base
--                      , presburger-dfa
--   default-language:    Haskell2010

test-suite presburger-dfa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Arithmetic.Presburger.Solver.DFA.AutomataSpec
  build-depends:       base
                     , presburger-dfa
                     , hspec
                     , tasty-discover
                     , unordered-containers
                     , containers
                     , QuickCheck
                     , quickcheck-instances
                     , hashable
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/konn/presburger-dfa
