name:          presburger-dfa
version:       0.1.0.0
synopsis:      Initial project template from stack
description:   Please see README.md
homepage:      https://github.com/konn/presburger-dfa#readme
license:       BSD3
license-file:  LICENSE
author:        Hiromi ISHII
maintainer:    konn.jinro _at_ gmail.com
copyright:     2015 (c) Hiromi ISHII
category:      Math
build-type:    Simple

-- extra-source-files:
cabal-version: >=1.10

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Arithmetic.Presburger.Solver.DFA
    Arithmetic.Presburger.Solver.DFA.Automata
    Arithmetic.Presburger.Solver.DFA.Monadic

  other-modules:    Arithmetic.Presburger.Solver.DFA.Types
  build-depends:
      base                  >=4.7 && <5
    , bitvec
    , containers
    , deepseq
    , dlist
    , hashable
    , transformers
    , uniplate
    , unordered-containers
    , vector

  ghc-options:      -Wall

test-suite presburger-dfa-test
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            test.hs
  other-modules:
    Arithmetic.Presburger.Solver.DFA.AutomataTest
    Arithmetic.Presburger.Solver.DFATest
    Arithmetic.Presburger.Solver.Test.Shared

  build-tool-depends: tasty-discover:tasty-discover -any
  build-depends:
      base
    , containers
    , hashable
    , presburger-dfa
    , QuickCheck
    , quickcheck-instances
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , unordered-containers

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall

benchmark solve-bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmarks/src
  main-is:          Main.hs

  if impl(ghc >=8.10)
    ghc-options: "-with-rtsopts=-A32m --nonmoving-gc -T"

  else
    ghc-options: "-with-rtsopts=-A32m -T"

  build-depends:
      base
    , containers
    , deepseq
    , dlist
    , hashable
    , presburger
    , presburger-dfa
    , tasty-bench

source-repository head
  type:     git
  location: https://github.com/konn/presburger-dfa
